Commit final changes

--- a/4-matrix-representation/code.ipynb
+++ b/4-matrix-representation/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "4                 0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,21 @@
       "1011        1.0               5.0            1.0               0.0\n",
       "1012        1.0             116.0            3.0               1.0\n",
       "\n",
-      "[1013 rows x 4 columns]\n"
+      "[1013 rows x 4 columns]\n",
+      "         rent\n",
+      "0      3600.0\n",
+      "1      3900.0\n",
+      "2      2700.0\n",
+      "3      4900.0\n",
+      "4      3900.0\n",
+      "...       ...\n",
+      "1008   2300.0\n",
+      "1009   3750.0\n",
+      "1010   4000.0\n",
+      "1011   4200.0\n",
+      "1012  18000.0\n",
+      "\n",
+      "[1013 rows x 1 columns]\n"
      ]
     }
    ],
@@ -278,12 +292,13 @@
     "# let's see this in action:\n",
     "\n",
     "y, X = patsy.dmatrices('rent ~ building_age_yrs+ min_to_subway + has_washer_dryer', bk, return_type='dataframe')\n",
-    "print(X)"
+    "print(X)\n",
+    "print(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +310,7 @@
       "min_to_subway        -25.179742\n",
       "has_washer_dryer     719.578411\n",
       "dtype: float64 \n",
-      " Warnings:\n",
+      " Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
      ]
     }
@@ -308,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -374,34 +389,42 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:                   rent   R-squared:                       0.044\n",
-      "Model:                            OLS   Adj. R-squared:                  0.041\n",
-      "Method:                 Least Squares   F-statistic:                     15.46\n",
-      "Date:                Thu, 13 May 2021   Prob (F-statistic):           7.69e-10\n",
-      "Time:                        10:24:37   Log-Likelihood:                -8889.3\n",
+      "Dep. Variable:                   rent   R-squared:                       0.041\n",
+      "Model:                            OLS   Adj. R-squared:                  0.039\n",
+      "Method:                 Least Squares   F-statistic:                     21.77\n",
+      "Date:                Sun, 10 Oct 2021   Prob (F-statistic):           5.53e-10\n",
+      "Time:                        20:09:03   Log-Likelihood:                -8890.7\n",
       "No. Observations:                1013   AIC:                         1.779e+04\n",
-      "Df Residuals:                    1009   BIC:                         1.781e+04\n",
-      "Df Model:                           3                                         \n",
+      "Df Residuals:                    1010   BIC:                         1.780e+04\n",
+      "Df Model:                           2                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "====================================================================================\n",
       "                       coef    std err          t      P>|t|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------------\n",
-      "Intercept         3696.1700    105.742     34.955      0.000    3488.670    3903.670\n",
-      "building_age_yrs    -5.4651      1.117     -4.891      0.000      -7.658      -3.272\n",
-      "min_to_subway       -0.0070      0.004     -1.665      0.096      -0.015       0.001\n",
-      "secs_to_subway      -0.4195      0.252     -1.665      0.096      -0.914       0.075\n",
-      "has_washer_dryer   719.5784    186.995      3.848      0.000     352.636    1086.521\n",
+      "Intercept         3583.1906     81.172     44.143      0.000    3423.906    3742.475\n",
+      "building_age_yrs    -5.6084      1.115     -5.029      0.000      -7.797      -3.420\n",
+      "has_washer_dryer   746.8525    186.439      4.006      0.000     381.000    1112.705\n",
       "==============================================================================\n",
-      "Omnibus:                      858.113   Durbin-Watson:                   1.848\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            26270.262\n",
-      "Skew:                           3.755   Prob(JB):                         0.00\n",
-      "Kurtosis:                      26.790   Cond. No.                     3.23e+17\n",
+      "Omnibus:                      857.325   Durbin-Watson:                   1.846\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            26142.299\n",
+      "Skew:                           3.751   Prob(JB):                         0.00\n",
+      "Kurtosis:                      26.729   Cond. No.                         270.\n",
       "==============================================================================\n",
       "\n",
-      "Warnings:\n",
-      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The smallest eigenvalue is 1.18e-27. This might indicate that there are\n",
-      "strong multicollinearity problems or that the design matrix is singular.\n"
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\harish.daryani\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:1676: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_column(ilocs[0], value, pi)\n"
      ]
     }
    ],
@@ -414,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -426,8 +449,8 @@
       "Dep. Variable:                   rent   R-squared:                       0.041\n",
       "Model:                            OLS   Adj. R-squared:                  0.039\n",
       "Method:                 Least Squares   F-statistic:                     21.77\n",
-      "Date:                Thu, 13 May 2021   Prob (F-statistic):           5.53e-10\n",
-      "Time:                        10:24:57   Log-Likelihood:                -8890.7\n",
+      "Date:                Sun, 10 Oct 2021   Prob (F-statistic):           5.53e-10\n",
+      "Time:                        19:59:25   Log-Likelihood:                -8890.7\n",
       "No. Observations:                1013   AIC:                         1.779e+04\n",
       "Df Residuals:                    1010   BIC:                         1.780e+04\n",
       "Df Model:                           2                                         \n",
@@ -446,10 +469,22 @@
       "Kurtosis:                      26.729   Cond. No.                     8.68e+17\n",
       "==============================================================================\n",
       "\n",
-      "Warnings:\n",
+      "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
       "[2] The smallest eigenvalue is 6.82e-30. This might indicate that there are\n",
       "strong multicollinearity problems or that the design matrix is singular.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\harish.daryani\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:1676: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_column(ilocs[0], value, pi)\n"
      ]
     }
    ],
@@ -546,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
